# zbar-ros-QRNav

./: CMakeLists.txt  README.md  nodelet.xml  package.xml
include/zbar_opencv/: zbar_opencv.h  zbar_opencv_nodelet.h
launch/: test_nodelet.launch  zbar_nodelet.launch
src/: zbar_opencv.cpp  zbar_opencv_nodelet.cpp
